add: Posts section routes and logic, updated app.js, package.json, openapi.yaml, schema.prisma,index.js
