# backend/src/app.js
@@ -1,17 +1,21 @@
-const express = require("express");
-const testRoutes = require("./routes/testRoutes");
-const itemRoutes = require("./routes/itemRoutes");
-const chatRoutes = require("./routes/chatRoutes");
-const morgan = require("morgan");
-const { swaggerUi, swaggerDocument } = require("./swagger");
+import express from "express";
+import morgan from "morgan";
+import testRoutes from "./routes/testRoutes.js";
+import itemRoutes from "./routes/itemRoutes.js";
+import chatRoutes from "./routes/chatRoutes.js";
+import postRoutes from "./routes/postRoutes.js";
+import { swaggerUi, swaggerDocument } from "./swagger.js";
 
 const app = express();
+
 app.use(morgan("dev"));
 app.use(express.json());
+
 app.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-// Mount /users routes
+
 app.use("/users", testRoutes);
 app.use("/items", itemRoutes);
 app.use("/chat", chatRoutes);
+app.use("/posts", postRoutes);
 
-module.exports = app;
+export default app;
